# flecs-rs

./: Cargo.toml
examples/: dynamic_components.rs  hello_world.rs  systems.rs
examples/systems/: basics.rs  delta_time.rs
flecs-sys/: flecs.c
flecs-sys/src/: bindings.rs  lib.rs
src/: cache.rs  component.rs  entity.rs  filter.rs  lib.rs  query.rs  system.rs  terms.rs  world.rs
