[package]
name = "flecs"
description = "Rust bindings for the Flecs Entity Component System"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[workspace]
members = ["flecs-sys"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
homepage = "https://www.flecs.dev"
repository = "https://github.com/jazzay/flecs-rs"
license = "MIT"
keywords = ["ecs", "game", "flecs"]
categories = ["game-engines", "data-structures"]
rust-version = "1.68"

[profile.release]
# debug = true		# Don't accidently submit this!

# This option sadly results in 3X worse performance in Query::iter() on Arm
#	while the benefit is small in some areas. 
#	revisit if we can figure out / fix that perf degradation.
# lto = "fat"

[dependencies]
flecs-sys = { path = "flecs-sys", version = "0.1.4" }
once_cell = "1.18"

[dev-dependencies]
hecs = "0.10.3"
bevy_ecs = "0.10.1"
flax = "0.4.0"
criterion = "0.5"

[features]
export_bindings = ["flecs-sys/export_bindings"]
